// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenCountCard renders correctly when listen count is not zero 1`] = `
<ListenCountCard
  listenCount={100}
  user={
    Object {
      "id": 1,
      "name": "track_listener",
    }
  }
>
  <ForwardRef
    id="listen-count-card"
  >
    <div
      className="card "
      id="listen-count-card"
    >
      <div>
        track_listener has
         listened to
        <hr />
        100
        <br />
        <small
          className="text-muted"
        >
          songs so far
        </small>
      </div>
    </div>
  </ForwardRef>
</ListenCountCard>
`;

exports[`ListenCountCard renders correctly when listen count is zero or undefined 1`] = `
<ListenCountCard
  user={
    Object {
      "id": 1,
      "name": "track_listener",
    }
  }
>
  <ForwardRef
    id="listen-count-card"
  >
    <div
      className="card "
      id="listen-count-card"
    >
      <p
        className="text-muted"
      >
        track_listener's
         listens count
      </p>
      <hr
        style={
          Object {
            "margin": "10px 0px",
          }
        }
      />
      <div
        className="text-muted"
        style={
          Object {
            "fontSize": "14px",
          }
        }
      >
        track_listener hasn't
         listened to any songs yet.
      </div>
    </div>
  </ForwardRef>
</ListenCountCard>
`;
